# PIAICClassesQ3

./: main.py
Assignments/Assignment1/: pyproject.toml
Assignments/Assignment1/todoss/: main.py
Class1/Assignment1/: pyproject.toml
Class1/Assignment1/tests/: main.py
Class1/hello-fastapi/: README.md
Class1/hello-fastapi/todolist/: main.py
Class1/todos/: pyproject.toml
Class2/: main.py
Classes/Class1/Assignment1/: pyproject.toml
Classes/Class1/Assignment1/tests/: main.py
Classes/Class1/hello-fastapi/: pyproject.toml
Classes/Class1/todos/todos/: main.py
Presentation/: Cloud Native AI Introduction, Challenges and Path.pptx
todolist/: pyproject.toml
todolist/todolist/: main.py
