[tool.poetry]
name = "todoss"
version = "0.1.0"
description = ""
authors = ["saeedurrehman01 <saeedrehman241@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.scripts]
dev = "todoss.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
