[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["saeedurrehman01 <saeedrehman241@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
dev= "assignment1.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
